# PyThermalCamera

./: .gitignore  hello.py  pyproject.toml
src/: tc001-RAW.py  tc001v4.2.py
